[gd_scene load_steps=9 format=3 uid="uid://be442fhi42gni"]

[ext_resource type="Texture2D" uid="uid://k7hb6fmilg4g" path="res://scenes/gem/sprites/x2.png" id="1_37ggg"]
[ext_resource type="Script" path="res://scenes/board/gems_container.gd" id="2_s1mx3"]
[ext_resource type="Script" path="res://scenes/board/board_state_machine.gd" id="3_sdqco"]
[ext_resource type="Script" path="res://scenes/board/states/gem_selected.gd" id="4_22hrv"]
[ext_resource type="Script" path="res://scenes/board/states/gem_deselected.gd" id="4_y6aup"]
[ext_resource type="Script" path="res://scenes/board/states/gem_transitioned.gd" id="6_55kn6"]
[ext_resource type="Script" path="res://scenes/board/states/gem_destroyed.gd" id="7_k1bxe"]
[ext_resource type="Script" path="res://scenes/board/states/gem_reverted.gd" id="7_q5bxc"]

[node name="Board" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(2.08165e-12, 2.08165e-12)
anchor_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_direction = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
auto_translate = false
localize_numeral_system = false
mouse_filter = 2

[node name="PlayerPanel" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 0
size_flags_stretch_ratio = 0.0

[node name="Sprite2D" type="TextureRect" parent="HBoxContainer/PlayerPanel"]
layout_mode = 2
texture = ExtResource("1_37ggg")
stretch_mode = 3

[node name="Gems" type="Container" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
mouse_force_pass_scroll_events = false
script = ExtResource("2_s1mx3")

[node name="EnemyPanel" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0

[node name="Sprite2D" type="TextureRect" parent="HBoxContainer/EnemyPanel"]
layout_mode = 2
texture = ExtResource("1_37ggg")
stretch_mode = 3

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_sdqco")
initial_state = NodePath("GemDefault")

[node name="GemSelected" type="Node" parent="StateMachine"]
script = ExtResource("4_22hrv")

[node name="GemDefault" type="Node" parent="StateMachine"]
script = ExtResource("4_y6aup")

[node name="GemTransitioned" type="Node" parent="StateMachine" node_paths=PackedStringArray("board")]
script = ExtResource("6_55kn6")
board = NodePath("../../HBoxContainer/Gems")

[node name="GemReverted" type="Node" parent="StateMachine" node_paths=PackedStringArray("board")]
script = ExtResource("7_q5bxc")
board = NodePath("../../HBoxContainer/Gems")

[node name="GemDestroyed" type="Node" parent="StateMachine"]
script = ExtResource("7_k1bxe")
